--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "orinoco-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is the back end server for Project 5 of the Junior Web Developer path.",
   "main": "server.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,8 +14,17 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.3.0",
-    "mongoose": "^5.3.8",
+    "mongoose": "^5.12.3",
     "mongoose-unique-validator": "^2.0.2",
     "uuid": "^3.3.2"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/quarkend/WJDP5.git"
+  },
+  "bugs": {
+    "url": "https://github.com/quarkend/WJDP5/issues"
+  },
+  "homepage": "https://github.com/quarkend/WJDP5#readme"
 }
